[package]
name = "scalar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accept-language = "2.0.0"
hyper = { version = "0.14.20", features = ["server"] }
regex = "1.6.0"
routerify = "3.0.0"
simple_colors = "1.0.1"
tokio = { version = "1", features = ["full"] }
