[package]
name = "scalar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accept-language = "2.0.0"
askama = "0.11.1"
axum = "0.5.15"
axum-extra = { version = "0.3.7", features = ["spa"] }
axum-macros = "0.2.3"
axum-server = { version = "0.4.2", features = ["tls-rustls"] }
fluent = "0.16.0"
fluent-langneg = "0.13.0"
glob = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.3"
tower = "0.4.13"
tower-http = "0.3.4"
unic-langid = "0.9.0"

[[bin]]
name = "scalar"
path = "app/main.rs"
